refactor(ingestion,storage,cli): adopt spector-config, pure-utility role
- spector-ingestion: remove FileIngestionMain (ingestion now via runtime)
- spector-storage: move PersistenceMode to spector-config, add VectorStoreFactory
- spector-cli: update POM and README for runtime dependency